2006-09-22   Dave Hyatt  <hyatt@apple.com>

        Add support for invalidation of widgets.  This will be needed for the Win32 widget subsystem (and for
        any widget subsystems that don't have any underlying native objects backing the widgets.

        Reviewed by anders

        * platform/Widget.h:
        * platform/mac/WidgetMac.mm:
        (WebCore::Widget::invalidate):
        (WebCore::Widget::invalidateRect):
        * platform/win/TemporaryLinkStubs.cpp:
        (Widget::invalidate):
        (Widget::invalidateRect):

2006-09-22  Rob Buis  <buis@kd.org>

        Reviewed by eseidel.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=10901
        Merge build fixes from unity

        * CMakeLists.txt:

2006-09-21  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by eseidel.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=10977
        SVGDocument does not expose 'rootElement' property

        Enable 'rootElement' property.

        * ksvg2/svg/SVGDocument.idl:

2006-09-21  Steve Falkenburg  <sfalken@apple.com>

        Tweak includes.

        * platform/ResourceLoaderInternal.h:

2006-09-21  Geoffrey Garen  <ggaren@apple.com>

        build fixed. band happy.
        
        * platform/cg/GraphicsContextCG.cpp:
        (WebCore::GraphicsContext::translate):
        * platform/mac/WidgetMac.mm:

2006-09-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej.
        
        Some Widget refactoring.

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * bridge/mac/FrameMac.mm:
        * bridge/win/FrameWin.cpp:
        (WebCore::FrameWin::runJavaScriptAlert):
        (WebCore::FrameWin::runJavaScriptConfirm):
        * bridge/win/PageWin.cpp:
        (WebCore::Page::Page):
        (WebCore::rootWindowForFrame):
        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::translate):
        * page/FrameView.cpp:
        (WebCore::FrameView::isFrameView):
        * page/Page.h: